# pyfnos

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  demo.py  pyproject.toml  test_fnos_client.py
examples/: docker_manager.py  endpoint_detection.py  event_logger.py  file.py  iscsi_manager.py  login_via_token.py  network.py  not_connected.py  notify.py  reconnect.py  resource_monitor.py  resource_monitor_general.py  sac.py  share.py  store.py  system_info.py  user.py
fnos/: __init__.py  client.py  docker_manager.py  event_logger.py  file.py  iscsi_manager.py  notify.py  resource_monitor.py  share.py  store.py  user.py
specs/: ssl-support-plan.md  ssl-support-spec.md  ssl-support-tasks.md
tests/: test_dockermgr_compose_list.py  test_dockermgr_container_list.py  test_dockermgr_stats.py  test_dockermgr_system_setting_get.py  test_eventlogger_common_list.py  test_file_get_acl.py  test_file_list.py  test_file_mkdir.py  test_file_remove.py  test_iscsi_manager.py  test_network_detect.py  test_network_list.py  test_notify_unread_total.py  test_resource_monitor_cpu.py  test_resource_monitor_disk.py  test_resource_monitor_general.py  test_resource_monitor_gpu.py  test_resource_monitor_memory.py  test_resource_monitor_net.py  test_sac_ups_status.py  test_share_smb_opt.py  test_store_calculate_space.py  test_store_general.py  test_store_get_disk_smart.py  test_store_get_state.py  test_store_get_user_storage.py  test_store_list_disks.py  test_system_info_get_hardware_info.py  test_system_info_get_host_name.py  test_system_info_get_machine_id.py  (+6 more)
(+4 files in other folders)
