[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnos"
version = "0.10.1"
description = "飞牛fnOS的Python SDK。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0",
    "pycryptodome>=3.23.0",
]

[project.urls]
Homepage = "https://github.com/Timandes/pyfnos"
Repository = "https://github.com/Timandes/pyfnos.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnos*"]

[dependency-groups]
dev = [
    "twine>=6.2.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external dependencies like running fnOS service)",
]
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
